--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@mui/icons-material": "^7.0.1",
-    "@mui/material": "^7.0.2",
+    "@mui/icons-material": "^7.1.0",
+    "@mui/material": "^7.1.0",
     "@phosphor-icons/react": "^2.1.7",
     "@recogito/annotorious": "^2.7.13",
     "@recogito/annotorious-selector-pack": "^0.6.1",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
+    "jspdf": "^3.0.1",
     "konva": "^9.3.20",
     "mdb-react-ui-kit": "^9.0.0",
     "react": "^19.0.0",
@@ -32,6 +33,7 @@
     "react-konva": "^19.0.3",
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^7.5.1",
+    "recharts": "^2.15.3",
     "use-image": "^1.1.1"
   },
   "devDependencies": {
